--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@ body {
 
 
 }
+h1 {
+    font-size: 30px;
+}
 
 .container {
     width: 80%;
@@ -25,6 +28,9 @@ body {
     color: #fff;
     padding: 10px 0;
     
+}
+#header h1 {
+    margin-bottom: 0;
 }
 
 #header .container{
@@ -41,6 +47,9 @@ body {
     align-content: center;
 }
 
+#header .navbar ul {
+    margin-bottom: 0;
+}
 
 #header .navbar ul li {
     display: inline;
@@ -72,4 +81,28 @@ body {
     text-align: center;
     padding: 10px 0;
     margin-top: 20px;
+}
+
+
+
+
+/* index */
+
+.Horizontal-Scroll-Bar{
+
+    white-space: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+
+
+}
+.poster{
+
+    width: 960px;
+    height: 540px;
+    background-color: lightblue;
+    margin: 10px;
+    display: inline-block;
+    
+
 }
