--- a/css/style.css
+++ b/css/style.css
@@ -66,11 +66,7 @@ h1 {
     padding: 20px 0;
 }
 
-.hero {
-    background: #f4f4f4;
-    padding: 50px 0;
-    text-align: center;
-}
+
 
 .featured-movies,
 .about-us,
@@ -95,6 +91,16 @@ h1 {
 
 /* index */
 
+
+
+.hero {
+    background: #f4f4f4;
+    padding: 25px 0;
+    text-align: center;
+}
+
+
+
 .Horizontal-Scroll-Bar {
 
     white-space: nowrap;
@@ -104,16 +110,26 @@ h1 {
 
 }
 
+
 .poster {
 
-    width: 960px;
-    height: 540px;
+    width: 100%;
+    height: auto;
     background-color: lightblue;
     margin: 10px;
     display: inline-block;
 
 
 }
+
+.ads-sidebar div{
+    display: flex;
+    gap: 10px;
+    margin: 0 auto;
+}
+
+
+
 
 /* register */
 #reg-form-container {
@@ -129,4 +145,9 @@ h1 {
     text-transform: uppercase;
     font-weight: bold;
     font-size: 20px
+}
+
+aside {
+    display: flex;
+    padding
 }
