--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,8 @@ h1 {
     background: #f4f4f4;
     padding: 25px 0;
     text-align: center;
+    grid-area: hero ;
+  
 }
 
 
@@ -122,10 +124,50 @@ h1 {
 
 }
 
+
+.featured-movies{
+    grid-area: featured-movies;
+
+}
+
+.ads-sidebar{
+    grid-area: ads-sidebar;
+    
+  
+}
+
+
 .ads-sidebar div{
     display: flex;
     gap: 10px;
     margin: 0 auto;
+}
+.ads-sidebar .ads-pic {
+    width: 45%;
+    height: auto;
+    background-color: lightblue;
+    margin: 10px;
+}
+
+
+
+@media screen and (min-width: 768px) {
+
+    #main-content {
+        display: grid;
+        grid-template-areas:  "left-aside hero ads-sidebar"  
+                                "left-aside featured-movies ads-sidebar"    ;
+        grid-template-columns: 15% 70% 15%;
+    }
+    .ads-sidebar{
+    }
+    .ads-sidebar div{
+        flex-direction: column;
+    }
+    .ads-sidebar .ads-pic {
+        width: 100%;
+    }
+
 }
 
 
