--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ h1 {
 
 @media screen and (min-width: 768px) {
 
-    #main-content {
+    #trangchu #main-content {
         display: grid;
         grid-template-areas:  "left-aside hero ads-sidebar"  
                                 "left-aside featured-movies ads-sidebar"    ;
