--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ h1 {
 
 
 
+
 .featured-movies,
 .about-us,
 .product-list,
@@ -86,6 +87,47 @@ h1 {
     margin-top: 20px;
 }
 
+
+.footer-nav{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 10px;
+}
+#footer ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+#footer ul li a{
+    color: #fff;
+    text-decoration: none;
+   
+}
+.social-icon .fa-facebook-square {
+    color: #1877F2; 
+}
+
+.social-icon .fa-twitter-square {
+    color: #1DA1F2; 
+}
+
+.social-icon .fa-instagram-square {
+    color: #E4405F; 
+}
+
+.social-icon .fa-youtube-square {
+    color: #FF0000; 
+}
+
+
+
+@media screen and (min-width: 768px) {
+    .footer-nav{
+        grid-template-columns: repeat(3, 1fr);
+    }
+    
+}
 
 
 
@@ -159,7 +201,7 @@ h1 {
                                 "left-aside featured-movies ads-sidebar"    ;
         grid-template-columns: 15% 70% 15%;
     }
-    .ads-sidebar{
+    .ads-sidebar {
     }
     .ads-sidebar div{
         flex-direction: column;
