--- a/css/style.css
+++ b/css/style.css
@@ -149,3 +149,41 @@ h1 {
     font-weight: bold;
     font-size: 20px
 }
+
+
+/* product */
+
+.phim_Product{
+    padding: 25px;
+    display: inline-block;
+    border: solid 4px black;
+    margin-bottom: 5px;
+    margin-top: 2px;
+}
+
+.img_Product{
+    border: solid black 5px;
+    height: 250px;
+    width: 230px;
+}
+
+#div_ContentAndImgProduct{
+    display: inline-block;
+    text-align: center;
+    
+}
+
+#main_Product{
+    margin: auto;
+    width: 80%;
+}
+
+#body_Product td{
+    text-align: left;
+    font-size: 18px;
+}
+
+.div_Content{
+    height: 250px;
+    width: 230px;
+}
