--- a/css/style.css
+++ b/css/style.css
@@ -219,9 +219,33 @@ h1 {
 
 
 /* register */
+@media (min-width: 1024px) {
+
+    #reg-form {
+        max-width: 500px;
+        margin-bottom: 10%;
+    }
+}
+
+@media (min-width: 740px) and (max-width:1024px) {
+
+    #reg-form {
+        margin: 20% 0px;
+
+    }
+}
+
+@media (max-width: 740px) {
+    #reg-form {
+        margin: auto 30px !important;
+    }
+}
 
 #reg-form {
+    padding: 30px;
     border-radius: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #form-title {
