--- a/css/style.css
+++ b/css/style.css
@@ -295,10 +295,17 @@ h1 {
 
 #body_Product td {
     text-align: left;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .div_Content {
     height: 250px;
     width: 230px;
+}
+
+.name_movie{
+    height: 100px;
+    width: 230px;
+    display: inline;
+    color: rgb(39, 8, 8);
 }
