--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,7 @@ h1 {
     border: solid 4px black;
     margin-bottom: 5px;
     margin-top: 2px;
+    border-radius: 8%;
 }
 
 .img_Product {
@@ -289,10 +290,17 @@ h1 {
     width: 230px;
 }
 
+main img{
+    transition: transform 0.3s ease;
+}
+
+main img:hover{
+    transform: scale(1.05);
+}
+
 #div_ContentAndImgProduct {
     display: inline-block;
     text-align: center;
-
 }
 
 #main_Product {
@@ -315,4 +323,11 @@ h1 {
     width: 230px;
     display: inline;
     color: rgb(39, 8, 8);
+}
+
+#TieuDe{
+    font-size: 50px;
+    margin-bottom: 30px;
+    font-weight: 10;
+    border-bottom: solid black;
 }
