--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ h1 {
         padding: 0;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
-        gap: 10%;
+        gap: 3%;
         width: 90%;
     }
 
@@ -89,6 +89,7 @@ h1 {
         
         margin: 0 auto;
         text-align: center;
+        padding: 5px 10px;
     }
 
 }
@@ -101,7 +102,6 @@ h1 {
         padding: 0;
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-        gap: 10px;
         width: 100%;
 
     }
