--- a/css/style.css
+++ b/css/style.css
@@ -53,26 +53,34 @@ h1 {
 
 #header .navbar ul li {
     display: inline;
-    margin-left: 20px;
-    padding: 10px 20px;
+    
     
 }
-#header .navbar ul li:hover {
-    background: #aeb9c7;
-    transition: transform 0.3s ease-out;
-    transform: scale(1.02);
-}
+
 
 #header .navbar ul li a {
     color: #fff;
     text-decoration: none;
+    padding: 10px 20px;
+    width: 100%;
+    height: 100%;
+
 }
+
+#header .navbar ul li a:hover {
+    background: #aeb9c7;
+    transition: transform 0.5s ease-out;
+    transform: scale(1.02);
+    color: #241e1e;
+}
+
+
 
 #main-content {
     padding: 20px 0;
 }
 
-@media (min-width: 520px) and (max-width: 768px) {
+@media (min-width: 520px) and (max-width: 1000px) {
     #header .container {
         flex-direction: column; 
     }
@@ -80,7 +88,7 @@ h1 {
         margin: 0 auto;
         padding: 0;
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        
         gap: 3%;
         width: 90%;
     }
@@ -89,10 +97,28 @@ h1 {
         
         margin: 0 auto;
         text-align: center;
+        
+    }
+    #header .navbar ul li a {
+        display: block;
         padding: 5px 10px;
     }
 
 }
+
+@media (min-width: 768px) and (max-width: 1000px) {
+    #header .navbar ul {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+@media (min-width: 520px) and (max-width: 767px) {
+    #header .navbar ul {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+
+
 @media  (max-width: 519px) {
     #header .container {
         flex-direction: column; 
@@ -101,18 +127,22 @@ h1 {
         margin: 0;
         padding: 0;
         display: grid;
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         width: 100%;
 
     }
 
     #header .navbar ul li {
         margin: 0;
-        padding: 10px 0;
+        
         text-align: center;
         display: block;
       
         
+    }
+    #header .navbar ul li a {
+        display: block;
+        padding: 10px 0;
     }
     
 }
@@ -341,17 +371,11 @@ h1 {
     .aSectionPhim{
         display: inline-block;
     }
-<<<<<<< HEAD
 
     .img_Product {
         height: 180px;
         width: 147px;
         border-radius: 10%;
-=======
-    
-    #main_Product main img:hover{
-        transform: scale(1.05);
->>>>>>> 16f57581baa90a41c8c98e9e90bdfc56992da438
     }
      
     #div_ContentAndImgProduct {
@@ -438,7 +462,7 @@ h1 {
         height: 90%;
         width: 80%;
         display: block;
-        margin: 5%;
+        margin: 5% auto;
     }
     .aSectionPhim{
         border: solid black 2px;
@@ -450,11 +474,7 @@ h1 {
         transition: transform 0.3s ease;
     }
     
-<<<<<<< HEAD
     #main_Product img:hover{
-=======
-    #main_Product main img:hover{
->>>>>>> 16f57581baa90a41c8c98e9e90bdfc56992da438
         transform: scale(1.05);
     }
     
