--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,25 @@ h1 {
 
 }
 
+#header a {
+    color: #fff;
+    text-decoration: none;
+}
+
 #header h1 {
     margin-bottom: 0;
+}
+
+
+#header .logo{
+    display: flex;
+    justify-content: space-between;
+}
+
+#header img {
+    width: 36px;
+    height: 36px;
+    
 }
 
 #header .container {
@@ -42,7 +59,29 @@ h1 {
     justify-content: space-between;
 
 }
+@media  (min-width: 769px) {
+    .logo img {
+        display: none;
+    }   
+}
 
+
+@media  (max-width: 768px) {
+    .logo img {
+        display: block;
+    }   
+    .navbar {
+        display: none;
+    }
+    
+    .navbar.active {
+        display: block;
+    }
+    
+    
+    
+   
+}
 
 
 
@@ -53,7 +92,7 @@ h1 {
 
 #header .navbar ul li {
     display: inline;
-
+    
 
 }
 
@@ -64,12 +103,15 @@ h1 {
     padding: 10px 20px;
     width: 100%;
     height: 100%;
+    border: 1px solid #333;
+    border-radius: 5px;
+    font-weight: bold;
 
 }
 
 #header .navbar ul li a:hover {
-    background: #aeb9c7;
-    transition: transform 0.5s ease-out;
+    background: #cac8c8;
+    transition: all 0.3s ease-out;
     transform: scale(1.02);
     color: #241e1e;
 }
@@ -80,49 +122,7 @@ h1 {
     padding: 20px 0;
 }
 
-@media (min-width: 520px) and (max-width: 1000px) {
-    #header .container {
-        flex-direction: column;
-    }
-
-    #header .navbar ul {
-        margin: 0 auto;
-        padding: 0;
-        display: grid;
-
-        gap: 3%;
-        width: 90%;
-    }
-
-    #header .navbar ul li {
-
-        margin: 0 auto;
-        text-align: center;
-
-    }
-
-    #header .navbar ul li a {
-        display: block;
-        padding: 5px 10px;
-    }
-
-}
-
-@media (min-width: 768px) and (max-width: 1000px) {
-    #header .navbar ul {
-        grid-template-columns: repeat(4, 1fr);
-    }
-}
-
-@media (min-width: 520px) and (max-width: 767px) {
-    #header .navbar ul {
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
-
-
-
-@media (max-width: 519px) {
+@media (max-width: 1000px) {
     #header .container {
         flex-direction: column;
     }
@@ -150,6 +150,22 @@ h1 {
         padding: 10px 0;
     }
 
+
+}
+
+
+
+
+@media (min-width: 769px) and (max-width: 1000px) {
+    #header .navbar ul {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media (max-width: 768px) {
+    #header .navbar ul {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
 
@@ -211,10 +227,10 @@ h1 {
 
 
 @media screen and (min-width: 768px) {
+   
     .footer-nav {
         grid-template-columns: repeat(3, 1fr);
     }
-
 }
 
 
